# m4-simulation-old

./: README.md
gazebo_uneven_terrain/: CMakeLists.txt  package.xml
gazebo_uneven_terrain/launch/: basic.launch  terrain.launch  terrain_1.launch  terrain_3.launch
grid_3d_nav/: CMakeLists.txt  package.xml
grid_3d_nav/launch/: nav.launch
grid_3d_nav/msg/: GlobalPath.msg  PoseStampedwithflag.msg
grid_3d_nav/scripts/: 3d_astar.py  3d_path.npy  aerial_follower.py  analysis.py  astar.py  costmap.npy  demo.py  mulitimodal_path_publisher.py  nav_path_republisher.py  simple_follower_2d.py
m4assembly/: CMakeLists.txt  package.xml  trials_log
m4assembly/config/: controller_config.yaml  joint_names_m4assembly.yaml
m4assembly/launch/: Controller.launch  display.launch  gazebo (copy).launch  gazebo.launch  iris.launch  m4_ardu.launch  m4_morphed_ardu.launch  m4_morphed_ardu_workaround.launch  m4_morphed_fixed_ardu.launch  test_1m4_morphed_ardu_workaround.launch  test_2m4_morphed_ardu_workaround (copy).launch  uneven_surface.launch
m4assembly/script/: hover.py
m4assembly/src/: Joint_pose.py  robot_position_change.py
m4assembly/urdf/: m4assembly.csv  m4assembly.urdf  m4assembly_morphed_fixed_with_ardupilot.urdf  m4assembly_morphed_with_ardupilot.urdf  m4assembly_with_ardupilot (copy).urdf  m4assembly_with_ardupilot.urdf  m4assembly_with_ardupilot_workaround.urdf  new_iris.urdf
m4assembly/urdf/backup/: m4assembly_with_ardupilot_apr11.urdf  m4assembly_with_ardupilot_old.urdf
odom2tf/: CMakeLists.txt  package.xml
odom2tf/launch/: odom2tf.launch
(+18 files in other folders)
