<?xml version="1.0"?>
<package format="2">
  <name>gazebo_uneven_terrain</name>
  <version>0.0.0</version>
  <description>gazebo_uneven_terrain</description>

  <maintainer email="rajput.ro@northeastern.com">ros</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
