<package format="2">
  <name>m4assembly</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for m4Assembly</p>
    <p>This package contains configuration data, 3D models and launch files
for m4Assembly robot</p>
  </description>
  <author>rohit_rajput</author>
  <maintainer email="rajput.ro@northeastern.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
